--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,3 @@
-[general]
-OPENAI_API_KEY = "sk-...tu_clave..."
+OPENAI_API_KEY = "sk-..."
+OPENAI_ORG_ID = "org_..."          # si aplica
+OPENAI_PROJECT = "proj_..."        # si aplica
